Fix H2 Spacing

--- a/styles2.css
+++ b/styles2.css
@@ -17,7 +17,7 @@ body{
 }
 
 h2{
-	margin-left: -6%;
+	margin-left: -9.5%;
 	width:50%;
 }
 
